# python-project-52

./: .codeclimate.yml  .gitignore  Makefile  README.md  build.sh  pyproject.toml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: context_processors.py  mixins.py  settings.py  urls.py  views.py
task_manager/app_label/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/app_label/migrations/: 0001_initial.py
task_manager/app_status/: apps.py  forms.py  urls.py  views.py
task_manager/app_status/migrations/: 0001_initial.py
task_manager/app_statuses/: apps.py  models.py  tests.py  urls.py  views.py
task_manager/app_tag/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/app_tag/migrations/: 0001_initial.py
task_manager/app_task/: apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/app_task/migrations/: 0001_initial.py  0002_alter_task_assignee_alter_task_labels_and_more.py  0002_alter_task_tags.py  0003_alter_task_tags.py  0003_rename_assignee_task_executor.py  0004_alter_task_assignee_alter_task_status_and_more.py  (+3 more)
task_manager/app_user/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/label/: apps.py  models.py  urls.py  views.py
task_manager/status/: apps.py  models.py  urls.py  views.py
task_manager/task/: apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: create_user.html  index.html  layout.html  login.html  users.html
task_manager/user/: models.py  urls.py  views.py
(+29 files in other folders)
